CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)
FIND_PACKAGE(Torch REQUIRED)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
FIND_PACKAGE(SndFile REQUIRED)

INCLUDE_DIRECTORIES(${SNDFILE_INCLUDE_DIR})

SET(src init.c)

#FILE(GLOB luasrc *.lua)
#SET(luasrc ${luasrc} test/test.lua)

ADD_TORCH_PACKAGE(sndfile "${src}" "${luasrc}")
#ADD_TORCH_DOK(dok nn "Machine Learning" "Neural Networks" 3.1)

#TARGET_LINK_LIBRARIES(nn luaT TH)
