CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)
FIND_PACKAGE(Torch REQUIRED)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})
FIND_PACKAGE(SndFile REQUIRED)

INCLUDE_DIRECTORIES(${SNDFILE_INCLUDE_DIR})

SET(src init.c buffer.c)
SET(luasrc init.lua)

ADD_TORCH_PACKAGE(sndfile "${src}" "${luasrc}")

TARGET_LINK_LIBRARIES(sndfile luaT TH ${SNDFILE_LIBRARY})
